<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
     <LinearLayout
         android:layout_width="match_parent"
   		 android:layout_height="wrap_content"
   		 android:orientation="horizontal" >
	     
	     <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/ip_add"
	        android:id="@+id/st_tv_ip"/>
	     
	      <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:id="@+id/tv_ip"/>
     </LinearLayout> 
    
     <LinearLayout
         android:layout_width="wrap_content"
   		 android:layout_height="wrap_content"
   		 android:orientation="horizontal">
	     <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/mask"
	        android:layout_gravity="center"
	        android:id="@+id/st_tv_mask"/>
	     
	     <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:id="@+id/tv_mask"/>
     </LinearLayout>
      <LinearLayout
	         android:layout_width="wrap_content"
	   		 android:layout_height="wrap_content"
	   		 android:orientation="horizontal">
	     <EditText
	         	android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:inputType="text"
		        android:id="@+id/et_net"
		        android:layout_gravity="center"/> 
		<ImageView
	        android:id="@+id/image_network_address_solution"
	        android:layout_width="40dp"
	        android:layout_height="40dp"/>
	  </LinearLayout>
	  <LinearLayout
	         android:layout_width="wrap_content"
	   		 android:layout_height="wrap_content"
	   		 android:orientation="horizontal">
		 <Button 
		    	android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:id="@+id/but_ans"
		        android:text="@string/text_butt_ans"
		        android:layout_gravity="center"
		        android:layout_weight="1"/>
		  <Button 
		    	android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:id="@+id/but_solution"
		        android:text="@string/text_butt_solution"
		        android:layout_gravity="center"
		        android:layout_weight="1"/>
		 
	</LinearLayout>
</LinearLayout>