<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/mediumgray"
    android:gravity="center_horizontal" >

<LinearLayout 
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" 
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentTop="true"
    android:orientation="vertical" >

        <TextView
            android:id="@+id/exercisetitle"
            style="@style/Title2DarkLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/convert_from_bo_to_dec" />

        <RelativeLayout
            style="@style/cards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cards" >

            <TextView
                android:id="@+id/numbertoconvert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:textColor="@color/mediumdarkgray"
                android:textSize="32sp"/>
        </RelativeLayout>

        <RelativeLayout
            style="@style/cards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cards" >

            <EditText
                android:id="@+id/answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:padding="10dp" >

                <requestFocus />
            </EditText>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btn_check"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/check"/>

            <Button
                android:id="@+id/btn_getsolution"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/solution"/>

            <Button
                android:id="@+id/btn_togglebinary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_import_export"
                android:minWidth="48dp"/>

		    <!--  Views required by the animation -->
		
        </LinearLayout>
        

    </LinearLayout>
			
	<!-- Begin of views required by the animation -->
	
   <RelativeLayout
       android:id="@+id/result"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_alignParentBottom="true"
       android:layout_alignParentRight="true"
       android:background="@color/pantalla"
       android:visibility="gone" >
			
	 <ImageView
		android:id="@+id/resultimage"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="140dp"/>
	</RelativeLayout>
			    
	 <!-- End of views required by the animation -->
			    
	    
</RelativeLayout>